fix layout; make text more readable

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,10 @@ h4 {
 .error {
   color: #d61f1f;
 }
+
+.sessionCard {
+  border: 1px solid #000;
+  max-width: 800px;
+  margin: 20px auto 0;
+  padding: 20px;
+}
